--- a/src/app/component/item/item.component.scss
+++ b/src/app/component/item/item.component.scss
@@ -28,8 +28,19 @@
     text-decoration: none;
   }
 
+  &--category {
+    padding: unset;
+    width: unset;
+  }
+
   &__contentContainer {
     margin-top: 2em;
+
+    &--category {
+      margin-top: unset;
+      padding-bottom: 0.5em;
+      padding-top: 0.5em;
+    }
   }
 
   &__image {
@@ -41,11 +52,24 @@
       max-height: 22em;
       max-width: 14em;
     }
+
+    &--category {
+      border: 1px solid #cccccc;
+      border-radius: 100%;
+      height: 7em;
+      object-fit: scale-down;
+      padding: 0.2em;
+      width: 7em;
+
+      @media screen and (min-width: 768px) {
+        height: 12em;
+        width: 12em;
+      }
+    }
   }
 
   &__imageContainer {
     align-items: center;
-    background-color: #FFF;
     border-radius: 0.5em;
     display: flex;
     justify-content: center;
@@ -71,6 +95,10 @@
     &:hover {
       transform: scale(1.1);
       transition: transform 0.5s;
+    }
+
+    &--category {
+      min-height: unset;
     }
 
     &--loading {
@@ -113,6 +141,10 @@
     text-overflow: ellipsis;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
+
+    &--category {
+      min-height: unset;
+    }
   }
 
   &--displayFromXXL {
