- reduced items on start-page from 8 to 4 - reduced highlight itms from 8 to 6

--- a/src/app/component/landing-pages/category-teaser.component.html
+++ b/src/app/component/landing-pages/category-teaser.component.html
@@ -12,7 +12,7 @@
     <app-item
       *ngFor="let item of getItemsOfCategory(); let i = index;"
       [item]="item"
-      [additionalCssClasses]="-1 !== [0, 1].indexOf(i) ? 'informationItem--displayUpToL informationItem--displayFromXXL' : ''"
+      [additionalCssClasses]="-1 !== [0].indexOf(i) ? 'informationItem--displayUpToL informationItem--displayFromXXL' : ''"
     ></app-item>
   </div>
   <div class="category__actions">
