--- a/src/styles/controls.scss
+++ b/src/styles/controls.scss
@@ -4,6 +4,7 @@ button {
   align-items: center;
   background-color: $container-background-color;
   border: 1px solid $container-color;
+  border-radius: 0.25em;
   color: $container-color;
   display: flex;
   transition: background-color 200ms linear;
@@ -22,6 +23,7 @@ button:hover {
   align-items: center;
   background-color: $container-background-color;
   border: 1px solid $container-color;
+  border-radius: 0.25em;
   color: $container-color;
   cursor: pointer;
   display: flex;
