--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -88,9 +88,10 @@
   &__offer {
     background-color: $container-background-color;
     border-radius: 0.5em;
+    display: block;
     font-weight: bold;
     margin-bottom: 0.5em;
-    padding: 0.5em;
+    padding: 0.3em 0.5em 0.5em 0.5em;
     color: $content-color;
     width: 20em;
 
@@ -110,6 +111,11 @@
       &:hover {
         color: $logo-slogan-color;
       }
+    }
+
+    &--updatedOn {
+      font-size: 0.9em;
+      font-weight: normal;
     }
   }
 
