--- a/src/app/component/overview/items.component.html
+++ b/src/app/component/overview/items.component.html
@@ -1,5 +1,5 @@
 <div class="container informationItems__content informationItems__content--categories">
-  <div *ngIf="subNavigationItems.length > 1" class="col-12 informationItems__container informationItems__container--categories">
+  <div *ngIf="showCategoryNavigation" class="col-12 informationItems__container informationItems__container--categories">
     <div *ngFor="let subNavigationItem of subNavigationItems">
       <app-item [item]="itemOfCategory(subNavigationItem?.toId || '')" [displayMode]="ITEM_MODE_CATEGORY"></app-item>
     </div>
