--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -6,13 +6,13 @@
           <i class="fa fa-regular fa-bars" (click)="categorySelection.showModal()"></i>
         </div>
 
-          <h1 class="header__logo" style="cursor: pointer;">
-            <a href="/">
-              <span class="header__titleCapitalLetter">W</span><span class="header__title">e</span>
-              <span class="header__titleCapitalLetter">W</span><span class="header__title">anna</span>
-              <span class="header__titleSlogan"> {{'NAVIGATION_SLOGAN_' + (activeNavigationItem?.hasSlogan ? activeNavigationItem?.toId || 'ALL' : 'ALL') | translate: 'en_US' }}!</span>
-            </a>
-          </h1>
+        <h1 class="header__logo" style="cursor: pointer;">
+          <a href="/">
+            <span class="header__titleCapitalLetter">W</span><span class="header__title">e</span>
+            <span class="header__titleCapitalLetter">W</span><span class="header__title">anna</span>
+            <span class="header__titleSlogan"> {{'NAVIGATION_SLOGAN_' + (activeNavigationItem?.hasSlogan ? activeNavigationItem?.toId || 'ALL' : 'ALL') | translate: 'en_US' }}!</span>
+          </a>
+        </h1>
 
         <div class="header__icons">
           <div class="header__iconWrapper">
@@ -31,16 +31,16 @@
       </div>
     </div>
   </div>
-  <div *ngIf="showSearchBar" class="secondSearchbar">
-    <div class="col-12 secondSearchbar__content">
+  <div *ngIf="showSearchBar" class="searchbar">
+    <div class="col-12 searchbar__content">
       <input
-        #secondBarSearchPattern
+        #searchPattern
         autofocus
         tabIndex="0"
         type="text"
         class="searchbar__input"
         placeholder="{{'iAmSearchingFor'|translate}}"
-        [formControl]="secondBarSearchPatternControl"
+        [formControl]="searchPatternControl"
       />
 
       <div class="searchbar__inputBox">
@@ -49,6 +49,9 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="col-12 hashtags">
+    #{{ firstHashTag }}
   </div>
 </div>
 
