- hashtags are now committed correctly - overview can now be switched between hashtags :)

--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -6,7 +6,7 @@
   background: $container-background-color-as-rgba;
   box-shadow: 0.1em 0.1em 0.8em lightgray;
   color: $header-footer-content-color;
-  padding: 0.5em 0.5em 0 0.5em;
+  padding: 0.5em 0.5em 0.7em 0.5em;
   position: fixed;
   width: 100%;
   z-index: 3;
@@ -123,13 +123,6 @@
   &__titleSlogan {
     color: $logo-slogan-color;
   }
-}
-
-.hashtags {
-  display: inline-flex;
-  font-size: 0.8em;
-  justify-content: center;
-  padding: 0.5em;
 }
 
 .headerbar {
