--- a/src/app/component/item/item.component.html
+++ b/src/app/component/item/item.component.html
@@ -30,7 +30,7 @@
       </div>
     </a>
 
-    <div class="informationItem__hashtagsWrapper">
+    <div *ngIf="showHashtags" class="informationItem__hashtagsWrapper">
       <div class="button informationItem__hashtag" *ngFor="let hashtag of item.hashtags" (click)="visitHashtag(hashtag)">
           #{{hashtag}}
       </div>
