--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -7,7 +7,8 @@
 
   <div class="container">
     <category-teaser *ngIf="!hasUserSearched"
-      [showHighlights]="true"
+      [showHashtags]="true"
+      [showHeader]="false"
     ></category-teaser>
 
     <category-teaser
