- fixed user has no hashtags bug - hashtags stage is now always visible on start-page

--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -6,10 +6,7 @@
   </div>
 
   <div class="container">
-    <category-teaser *ngIf="!hasUserSearched"
-      [showHashtags]="true"
-      [showHeader]="false"
-    ></category-teaser>
+    <category-teaser [showHashtags]="true" [showHeader]="false"></category-teaser>
 
     <category-teaser
       *ngFor="let item of allRootRootItems"
