--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="container">
-    <category-teaser [showHashtags]="true" [showHeader]="false"></category-teaser>
+    <category-teaser [showHashtags]="true" [showHeader]="false" [numberOfItems]="6"></category-teaser>
 
     <category-teaser
       *ngFor="let item of allRootRootItems"
