- finished hashtag suggestion integration

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -14,7 +14,7 @@
             <span *ngIf="!isHashtagsModule">
               <span class="header__titleSlogan"> {{'NAVIGATION_SLOGAN_' + (activeNavigationItem?.hasSlogan ? activeNavigationItem?.toId || 'ALL' : 'ALL') | translate: 'en_US' }}!</span>
             </span>
-            <div *ngIf="isHashtagsModule">
+            <div>
               <span class="header__title"> {{ activeHashtags }}</span>
             </div>
 
@@ -57,12 +57,12 @@
       </div>
     </div>
 
-    <div *ngIf="showSuggestions">
+    <div *ngIf="suggestions.length">
       <a href="{{getSuggestionLink(suggestion)}}" *ngFor="let suggestion of suggestions; let i = index;" class="col-12 searchbar__content">
         <div [ngClass]="['col-12', 'suggestion__item', 0 === i ? 'suggestion__item--first' : suggestions.length-1 === i ? 'suggestion__item--last' : '']">
           <div class="col-11">
-            <div class="suggestion__item--column suggestion__item--trend fa fa-chart-line"></div>
-            <div class="suggestion__item--column">#{{suggestion.label}}</div>
+            <div [ngClass]="[ 'suggestion__item--column', 'suggestion__item--trend', 'fa', suggestion.isNewItem() ? 'fa-plus' : suggestion.isSearchItem() ? 'fa-search' : 'fa-chart-line']"></div>
+            <div class="suggestion__item--column">{{suggestion.isSearchItem() ? '' : '#'}}{{suggestion.label}}</div>
           </div>
           <div class="col-1 suggestion__item--column suggestion__item--go fa fa-chevron-right"></div>
         </div>
