- automated deepest navigation linking for bots - teaser texts are now applied on overview ssr seo description - fixed serverside translation bug - hashtags can now also be set by hashtags route - hashtags route is now also applied on server-side

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,10 @@
     <input #gdpr (click)="gdprDialog.showModal();" style="display: none;" />
 
     <router-outlet></router-outlet>
+
+    <a *ngFor="let deepestNavigationItem of deepestLevelNavigationItems" href="/{{deepestNavigationItem.pathParts.join('/')}}" class="bot__link">
+      {{ 'NAVIGATION_' + deepestNavigationItem.toId | translate: 'de_DE' }} / {{ 'NAVIGATION_' + deepestNavigationItem.toId | translate: 'en_US' }}
+    </a>
   </div>
   <footer></footer>
 </div>
