--- a/src/app/component/product-view/single-product-view.component.html
+++ b/src/app/component/product-view/single-product-view.component.html
@@ -1,7 +1,13 @@
 <div class="container singleProductView__content">
 
   <div class="row">
-    <div class="col-12 content--center">
+    <div class="col-12 content__backToOverview content--center">
+      <a *ngIf="backToHashtagsUrl" href="{{backToHashtagsUrl}}" target="_self" class="button__wrapper">
+        <div *ngIf="navigationItemToCategory?.toId" class="button singleProductView__backToOverview">
+          {{ 'BACK_TO' | translate }} "#{{activeHashtags}}"
+        </div>
+      </a>
+
       <a href="{{backToCategoryUrl}}" target="_self" class="button__wrapper">
         <div *ngIf="navigationItemToCategory?.toId" class="button singleProductView__backToOverview">
             {{ 'BACK_TO' | translate }} "{{ 'NAVIGATION_' + navigationItemToCategory?.toId | translate }}"
