- search can now be executed using enter

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -44,7 +44,8 @@
         #searchPattern
         autofocus
         tabIndex="0"
-        type="text"
+        type="search"
+        (search)="searchNow()"
         class="searchbar__input"
         placeholder="{{'iAmSearchingFor'|translate}}"
         [formControl]="searchPatternControl"
