- search can now be executed using enter

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -42,6 +42,7 @@
     <div class="col-12 searchbar__content">
       <input
         #searchPattern
+        autocomplete="off"
         autofocus
         tabIndex="0"
         type="search"
