- introduced first long tailed keywords in order to improve search engine rankings - simplified mapping of product details

--- a/src/app/component/overview/items.component.html
+++ b/src/app/component/overview/items.component.html
@@ -54,3 +54,12 @@
     </div>
   </div>
 </div>
+
+<div *ngFor="let seoKey of ['A', 'B', 'C', 'D', 'E']">
+  <div *ngIf="seoHeader(seoKey)" class="container informationItems__content">
+    <div  class="col-12">
+      <h2>{{ seoHeader(seoKey) }}</h2>
+      <p [innerHTML]="seoContent(seoKey)"></p>
+    </div>
+  </div>
+</div>
