--- a/src/app/component/overview/items.component.html
+++ b/src/app/component/overview/items.component.html
@@ -55,11 +55,13 @@
   </div>
 </div>
 
-<div *ngFor="let seoKey of ['A', 'B', 'C', 'D', 'E']">
-  <div *ngIf="seoHeader(seoKey)" class="container informationItems__content">
-    <div  class="col-12">
-      <h2>{{ seoHeader(seoKey) }}</h2>
-      <p [innerHTML]="seoContent(seoKey)"></p>
+<div *ngFor="let seoNavigationId of seoNavigationIds">
+  <div *ngFor="let seoKey of ['A', 'B', 'C', 'D', 'E']">
+    <div *ngIf="seoHeader(seoNavigationId, seoKey)" class="container informationItems__content">
+      <div class="col-12">
+        <h2>{{ seoHeader(seoNavigationId, seoKey) }}</h2>
+        <p [innerHTML]="seoContent(seoNavigationId, seoKey)"></p>
+      </div>
     </div>
   </div>
 </div>
