--- a/src/app/component/landing-pages/start-page.component.scss
+++ b/src/app/component/landing-pages/start-page.component.scss
@@ -1,11 +1,12 @@
 @import '../../../styles/controls';
 @import '../../../styles';
 
-#advantagesDialog {
+#advantagesDialog,
+#filterSelectionDialog {
   border: 1px solid lightgray;
   border-radius: 1em;
   font-family: $font-family;
-  max-width: 80%;
+  max-width: 90%;
 }
 
 .startPage {
@@ -16,6 +17,7 @@
   }
 
   &__button {
+    margin-right: 0.5em;
     width: fit-content;
   }
 
