--- a/src/app/component/filter/filter-selection.component.html
+++ b/src/app/component/filter/filter-selection.component.html
@@ -46,6 +46,20 @@
       </div>
     </div>
 
+    <h5 class="filter filter__title filter__title--gap">{{ 'FILTERS_BRANDS' | translate }}</h5>
+    <div class="filters filters__items">
+      <div *ngFor="let filter of brandsFilters" class="form-check filters__item">
+        <input
+          type="checkbox"
+          class="form-check-input"
+          id="{{filter.id}}"
+          value="{{filter.id}}"
+          (change)="toggleFilter(filter.id)"
+          [defaultChecked]="isFilterSelected(filter.id)"/>
+        <label for="{{filter.id}}" class="form-check-label">{{filter.filterLabelId}}</label>
+      </div>
+    </div>
+
     <h5 class="filter filter__title filter__title--gap">{{ 'FILTERS_FITS' | translate }}</h5>
     <div class="filters filters__items">
       <div *ngFor="let filter of fitFilters" class="form-check filters__item">
@@ -58,6 +72,20 @@
           [defaultChecked]="isFilterSelected(filter.id)"/>
         <label for="{{filter.id}}" class="form-check-label">{{filter.filterLabelId}}</label>
       </div>
+    </div>
+  </div>
+
+  <h5 class="filter filter__title filter__title--gap">{{ 'FILTERS_STORAGE_SIZE' | translate }}</h5>
+  <div class="filters filters__items">
+    <div *ngFor="let filter of storageSizeFilters" class="form-check filters__item">
+      <input
+        type="checkbox"
+        class="form-check-input"
+        id="{{filter.id}}"
+        value="{{filter.id}}"
+        (change)="toggleFilter(filter.id)"
+        [defaultChecked]="isFilterSelected(filter.id)"/>
+      <label for="{{filter.id}}" class="form-check-label">{{filter.filterLabelId}}</label>
     </div>
   </div>
 
