--- a/src/app/component/filter/filter-selection.component.html
+++ b/src/app/component/filter/filter-selection.component.html
@@ -60,6 +60,20 @@
       </div>
     </div>
 
+    <h5 class="filter filter__title filter__title--gap">{{ 'FILTERS_SUSTAINABILITY' | translate }}</h5>
+    <div class="filters filters__items">
+      <div *ngFor="let filter of sustainabilityFilters" class="form-check filters__item">
+        <input
+          type="checkbox"
+          class="form-check-input"
+          id="{{filter.id}}"
+          value="{{filter.id}}"
+          (change)="toggleFilter(filter.id)"
+          [defaultChecked]="isFilterSelected(filter.id)"/>
+        <label for="{{filter.id}}" class="form-check-label">{{filter.filterLabelId | translate}}</label>
+      </div>
+    </div>
+
     <h5 class="filter filter__title filter__title--gap">{{ 'FILTERS_FITS' | translate }}</h5>
     <div class="filters filters__items">
       <div *ngFor="let filter of fitFilters" class="form-check filters__item">
