--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -13,6 +13,7 @@
 
     <category-teaser
       *ngFor="let item of allRootRootItems"
+      [numberOfItems]="6"
       [navigationItem]="item"
     ></category-teaser>
   </div>
