- added price selection in filter selection

--- a/src/app/component/filter/filter-selection.component.scss
+++ b/src/app/component/filter/filter-selection.component.scss
@@ -36,3 +36,14 @@
     flex-wrap: wrap;
   }
 }
+
+.price {
+  &__maximum {
+    display: inline-flex;
+    flex-flow: row-reverse;
+  }
+
+  &__slider {
+    padding: 0;
+  }
+}
