--- a/src/app/component/filter/filter-selection.component.html
+++ b/src/app/component/filter/filter-selection.component.html
@@ -2,8 +2,47 @@
   <div class="dialog dialog__close">
     <i class="fa fa-times-circle" (click)="dialog.close()"></i>
   </div>
+
   <div>
-    <h5 class="filter filter__title">Shops</h5>
+    <h5 class="filter filter__title filter__title--gap">Preis</h5>
+    <div class="container">
+      <div class="row">
+        <div class="col-6 price__slider">
+          <input
+            type="range"
+            class="form-range"
+            min="0"
+            max="15000"
+            [value]="minimumPrice"
+            #minPr
+            (input)="minPrice(minPr.value)"
+          >
+        </div>
+        <div class="col-6 price__slider">
+          <input
+            type="range"
+            class="form-range"
+            min="15000"
+            max="30000"
+            step="20"
+            [value]="maximumPrice"
+            #maxPr
+            (input)="maxPrice(maxPr.value)"
+          >
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          {{minimumPrice}} EUR
+        </div>
+        <div class="col-6 price__maximum">
+          {{maximumPrice}} EUR
+        </div>
+      </div>
+    </div>
+  </div>
+  <div>
+    <h5 class="filter filter__title filter__title--gap">Shops</h5>
     <div class="filters filters__items">
       <div *ngFor="let filter of shopsFilters" class="form-check filters__item">
         <input
